# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 tabstop=4:

2012-02-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add service options for optional parameters that control
      typical service defaults for: priority_default, queue_limit,
      dest_refresh_start, dest_refresh_delay
    * If cloudi_logger output is redirected to a different node, and it is
      listed as a configured node, it is monitored for
      disconnection/reconnection so that logging can be done locally if
      necessary (i.e., while the node is known to be disconnected).
    * Fix random:uniform/1 usage so that a seed is assigned
      based on erlang:now/1
    * Rename "2" suffix module names to avoid Erlang module name conflicts with
      other Erlang applications:
        array2.erl -> cloudi_array.erl
        lists2.erl -> cloudi_lists.erl
        math2.erl -> cloudi_math.erl
        pool2.erl -> cloudi_pool.erl
        pool2_sup.erl -> cloudi_pool_sup.erl
        proplists2.erl -> cloudi_proplists.erl
        string2.erl -> cloudi_string.erl
        tuple2.erl -> cloudi_tuple.erl
    * Update pqueue4 code

2012-02-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update zeromq to 2.1.11 and erlzmq2
    * Update jsx to 1.0rc1
    * Update misultin to 0.9f
    * Update trie and uuid code

2012-01-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix a race condition within the usage of the hexpi thread pool
    * Prevent external services from receiving messages prematurely
    * Changes to make sure a failed send to an external service's OS pid
      causes the service to terminate

2012-01-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add priority queuing to Erlang services
    * Add timeout events to remove any requests that remain within the
      priority queue after the request timeout expires
      (so no processing needs to occur on queued requests that have already
       timed-out, such that the response is ignored)