@@ -9,12 +9,12 @@
         cloudi_array,
         cloudi_configuration,
         cloudi_configurator,
+        cloudi_dispatcher,
         cloudi_job_db_couchdb,
         cloudi_job_db_memcached,
         cloudi_job_db_mysql,
         cloudi_job_db_pgsql,
         cloudi_job_db_tokyotyrant,
-        cloudi_job_dispatcher,
         cloudi_job,
         cloudi_job_filesystem,
         cloudi_job_http,
@@ -32,6 +32,7 @@
         cloudi_pool,
         cloudi_pool_sup,
         cloudi_proplists,
+        cloudi_random,
         cloudi_response,
         cloudi_services,
         cloudi_socket,
