@@ -145,7 +145,7 @@ init([tcp, BufferSize, Timeout, Prefix, TimeoutAsync, TimeoutSync,
         {ok, Listener} ->
             {ok, Port} = inet:port(Listener),
             {ok, Acceptor} = prim_inet:async_accept(Listener, -1),
-            random:seed(erlang:now()),
+            cloudi_random:seed(),
             destination_refresh_first(DestRefresh, ConfigOptions),
             destination_refresh_start(DestRefresh, ConfigOptions),
             {ok, 'CONNECT', #state{protocol = tcp,
@@ -173,7 +173,7 @@ init([udp, BufferSize, Timeout, Prefix, TimeoutAsync, TimeoutSync,
     case gen_udp:open(0, Opts) of
         {ok, Socket} ->
             {ok, Port} = inet:port(Socket),
-            random:seed(erlang:now()),
+            cloudi_random:seed(),
             destination_refresh_first(DestRefresh, ConfigOptions),
             {ok, 'CONNECT', #state{protocol = udp,
                                    port = Port,
