@@ -1,6 +1,12 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 tabstop=4:
 
+2012-03-03 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Rename cloudi_job_dispatcher.erl to cloudi_dispatcher.erl to avoid the
+      cloudi_job_ prefix because of the cloudi_job behavior usage
+    * Provide better seeding for random:uniform/1
+
 2012-02-25 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add service options for optional parameters that control
